# calculadora_python_teste

./: README.md  pyproject.toml
.github/workflows/: workflow.yml
modulo/: calculadora.py  principal.py
testes/: test_calculadora.py
