[project]
name = "teste"
version = "0.0.1"
description = "Exemplo teste"
readme = "README.md"
requires-python = ">=3.6.0"
license = { file = "LICENSE" }

authors = [
    { name = "Osmar de Oliveira Braz Junior", email = "osmar.braz@udesc.br" }
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
keywords = ["teste"]

dependencies = []

[project.urls]
repository = "https://github.com/osmarbraz/teste/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"